# final-project-level3-nlp-07

./: .gitignore  README.md  deploy_ssh.sh  model.py  pyproject.toml  requirements.txt  unsupervised.ipynb
.github/workflow/: deploy_ssh.yml  github-actions-demo.yml
DTS/: __init__.py  data_process.py  load_dataset.py  main.py  model.py  unsupervised.ipynb  utils.py
DTS/config/: config.yaml
app/: app.py  backend_hub.py  bentoml_packing.py  config.yaml  css  db_sample.py  frontend_test.py  iel.html  load_dataset.py  model.py  onnx.py  prediction.py  requirements.txt  test.js  test.py  tt.py  validation.py
app/paper-dashboard-master/assets/css/: ckbox.css
app/paper-dashboard-master/assets/js/: dashboard_input.js  get_keyword.js  get_timeline.js  request.js
app/paper-dashboard-master/examples/: app.js  backend.py  chatlist.py  dashboard.html  index.html  insert_username.html  notifications.html  package-lock.json  package.json  test.html  user.html
data/: hate_data.csv
notebooks/: TextTiling.ipynb  dialogue_eda.ipynb  extract_dialogue.ipynb  predict_test_DTS.ipynb  unsupervised.ipynb
preprocess/: preprocessing.py
summarization/: arguments.py  check.py  data_loader.py  logger.py  metrics.py  model.py  process_text.py  r3f.py  simcls.py  simcls_model.py  simcls_trainer.py  train.py  train_sweep.py  util.py  utils.py
summarization/config/: config.yaml
summarization/wandb/: latest-run
summarization/wandb/run-20230120_013142-xrbud99k/: run-xrbud99k.wandb
utils/: __init__.py  nltk.txt  open.py  postprocessing.py  preprocessing.py  stopword.txt
(+14 files in other folders)
