[tool.poetry]
name = "open-talk"
version = "0.1.0"
description = ""
authors = ["roy <gkstjd1201@naver.com>"]
readme = "README.md"
packages = [{include = "open_talk"}]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9.7 || >3.9.7,<4"
datasets="^2.7.0"
evaluate="^0.4.0"
filelock="^3.0.12"
nltk="^3.8.1"
numpy="^1.24.1"
omegaconf="^2.3.0"
pandas="^1.5.2"
PyYAML="^6.0"
requests="^2.28.2"
streamlit="^1.17.0"
streamlit_chat="^0.0.2.1"
streamlit-vis-timeline="^0.2.0"
torch="^1.13.1"
tqdm="^4.64.1"
transformers="^4.25.1"
wandb="^0.13.7"
chardet="^5.1.0"
bentoml="0.13.1"
xgboost="^1.7.3"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
pymongo = "^4.3.3"
krwordrank = "^1.0.3"
aiohttp = "^3.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"